--- a/JENKINSFILE
+++ b/JENKINSFILE
@@ -3,7 +3,7 @@ pipeline {
     stages {
     	stage('Copiar Git'){
     		steps {
-    			git credentialsId: 'alfonsoropero583', url: 'https://github.com/alfonsoropero583/helloworld.git'
+    			git 'https://github.com/alfonsoropero583/helloworld.git'
     		}	
     	}
     	stage('Unit'){
@@ -17,13 +17,13 @@ pipeline {
     	stage('Rest'){
     		steps {
     			bat'''
+    				set PYTHONPATH=%WORKSPACE%
     				set FLASK_APP=app\\api.py
     				set FLASK_ENV=development
     				start flask run
     				start java -jar C:\\ProgramData\\Jenkins\\.jenkins\\workspace\\CasoPractico_1_1\\wiremock-standalone-3.3.1.jar --port 9090 --root-dir C:\\ProgramData\\Jenkins\\.jenkins\\workspace\\CasoPractico_1_1\\wiremock
     			'''
     			bat'''
-    				set PYTHONPATH=%WORKSPACE%
     				pytest --junitxml=result-rest.xml test\\rest
     			'''
     		}	
